fix(container): set width to 1024px

--- a/src/ddesktop/webroot/index.html
+++ b/src/ddesktop/webroot/index.html
@@ -8,10 +8,11 @@
 
     <title>.ddesktop</title>
 
-    <!-- include css -->
     <link href="static/bower/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/bower/bootstrap-flat/css/bootstrap-flat.min.css" rel="stylesheet">
     <link href="static/css/style.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   </head>
   <body>
